--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.5",
+    "bootstrap-icons": "^1.11.3",
+    "lodash.debounce": "^4.0.8",
+    "next": "14.0.4",
+    "next-mdx-remote": "^4.4.1",
+    "nextjs-progressbar": "^0.0.16",
+    "qs": "^6.11.2",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
